CSS: Fix slanting radioboxes

--- a/catalog/view/theme/helium/css/stylesheet.css
+++ b/catalog/view/theme/helium/css/stylesheet.css
@@ -924,6 +924,23 @@ summary::-webkit-details-marker {
 }
 details[disabled] {
 	color: var(--text-muted);
+	pointer-events: none;
+}
+
+dialog::backdrop {
+    /* backdrop-filter: blur(5px); */
+	animation: blur-in 500ms forwards; /* Important */
+}
+
+@keyframes blur-in {
+	from {
+		background-color: #00000000;
+		backdrop-filter: blur(0px);
+	}
+	to {
+		background-color: #00000050;
+		backdrop-filter: blur(5px);
+	}
 }
 
 
@@ -1616,11 +1633,10 @@ input[type="checkbox"], input[type="radio"] {
 	background-color: var(--form-background);
 	/* Not removed via appearance */
 	margin: 0;
-  
 	font: inherit;
 	color: currentColor;
-	width: 1.15em;
-	height: 1.15em;
+	width: 30px;
+	height: 30px;
 	border: 0.15em solid var(--text-muted);
 	box-shadow: none;
 	display: grid;
@@ -1641,8 +1657,8 @@ input[type="radio"]::before {
   
 input[type="checkbox"]::before, input[type="radio"]::before {
 	content: "";
-	width: 1.1rem;
-	height: 1.1rem;
+	width: 20px;
+	height: 20px;
 	transform: scale(0);
 	transform-origin: center;
 	transition: var(--animation-duration) transform cubic-bezier(0.175, 0.885, 0.32, 1.275);
