--- a/catalog/view/theme/helium/js/slider.html
+++ b/catalog/view/theme/helium/js/slider.html
@@ -2,7 +2,7 @@
   <div class="grid-container">
   
   
-  <main class="grid-item main">
+  <main role="main" class="grid-item main">
     <div class="items">
       <div class="item item1"></div>
       <div class="item item2"></div>
