--- a/catalog/view/theme/helium/template/common/menu.twig
+++ b/catalog/view/theme/helium/template/common/menu.twig
@@ -2,10 +2,11 @@
   <button 
     type="button"
     id="main-menu-trigger"
-    class="primary dropdown-toggle main-menu-trigger"
+    class="primary main-menu-trigger"
     aria-role="menu"
     aria-haspopup="menu"
     aria-label="{{ text_category }}"
+    data-accordion-target="main-menu"
   >
     <div class="icon menu-icon">
       <span></span>
