--- a/catalog/view/theme/helium/template/common/rating_stars.twig
+++ b/catalog/view/theme/helium/template/common/rating_stars.twig
@@ -1,20 +1,22 @@
-<div class="rating">
-  {% if rating > 0 %}
-    {% for i in 1..5 %}
-      {% if rating >= i %}
-        <i class="icon-star"></i>
-      {% else %}
-        {%if rating -  i < 0 %}
-          <i class="icon-star-half"></i>
+<div aria-label="{{ aria_rating_label }}">
+  <div class="rating" role="presentation">
+    {% if rating > 0 %}
+      {% for i in 1..5 %}
+        {% if rating >= i %}
+          <i class="icon-star"></i>
         {% else %}
-          <i class="icon-star-empty"></i>
+          {%if rating -  i < 0 %}
+            <i class="icon-star-half"></i>
+          {% else %}
+            <i class="icon-star-empty"></i>
+          {% endif %}
         {% endif %}
-      {% endif %}
-    {% endfor %} 
-  {% endif %}
-  {% if count is defined and count > 0 %}
-    <span class="reviews-count">({{ count }})</span>
-  {% endif %}
+      {% endfor %} 
+    {% endif %}
+    {% if count is defined and count > 0 %}
+      <span class="reviews-count">({{ count }})</span>
+    {% endif %}
+  </div>
 </div>
 
 
