UPD: Replace alerts with <span class="text-danger">

--- a/catalog/view/theme/helium/template/account/forgotten.twig
+++ b/catalog/view/theme/helium/template/account/forgotten.twig
@@ -24,7 +24,7 @@
           enterkeyhint="next"
         />
         {% if error_email %}
-          <div class="text-danger">{{ error_email }}</div>
+          <span class="text-danger">{{ error_email }}</div>
         {% endif %} 
       </div>
     </fieldset>
