--- a/catalog/view/theme/helium/template/account/password.twig
+++ b/catalog/view/theme/helium/template/account/password.twig
@@ -11,7 +11,7 @@
         <div class="col-sm-10">
           <input type="password" name="password" value="{{ password }}" placeholder="{{ entry_password }}" id="input-password" />
           {% if error_password %}
-          <div class="text-danger">{{ error_password }}</div>
+          <span class="text-danger">{{ error_password }}</div>
           {% endif %}
         </div>
       </div>
@@ -20,7 +20,7 @@
         <div class="col-sm-10">
           <input type="password" name="confirm" value="{{ confirm }}" placeholder="{{ entry_confirm }}" id="input-confirm" />
           {% if error_confirm %}
-          <div class="text-danger">{{ error_confirm }}</div>
+          <span class="text-danger">{{ error_confirm }}</div>
           {% endif %}
         </div>
       </div>
