--- a/catalog/view/theme/helium/template/checkout/register.twig
+++ b/catalog/view/theme/helium/template/checkout/register.twig
@@ -551,7 +551,7 @@
 // 					$('.text-danger').remove();
 
 // 					if (json['error']) {
-// 						$(node).parent().find('input[name^=\'custom_field\']').after('<div class="text-danger">' + json['error'] + '</div>');
+// 						$(node).parent().find('input[name^=\'custom_field\']').after('<span class="text-danger">' + json['error'] + '</div>');
 // 					}
 
 // 					if (json['success']) {
