--- a/catalog/view/theme/helium/template/extension/captcha/basic.twig
+++ b/catalog/view/theme/helium/template/extension/captcha/basic.twig
@@ -11,7 +11,7 @@
       <input type="text" name="captcha" id="input-captcha" />
       <img loading="lazy" src="index.php?route=extension/captcha/basic/captcha" alt="" />
       {% if error_captcha %}
-      <div class="text-danger">{{ error_captcha }}</div>
+      <span class="text-danger">{{ error_captcha }}</div>
       {% endif %}
     </div>
     {% endif %}
