--- a/catalog/view/theme/helium/template/account/address_form.twig
+++ b/catalog/view/theme/helium/template/account/address_form.twig
@@ -21,7 +21,7 @@
           minlength="3" maxlength="32"
         />
         {% if error_firstname %}
-          <div class="text-danger">{{ error_firstname }}</div>
+          <span class="text-danger">{{ error_firstname }}</div>
         {% endif %}
       </div>
 
@@ -39,7 +39,7 @@
           minlength="3" maxlength="32"
         />
         {% if error_lastname %}
-          <div class="text-danger">{{ error_lastname }}</div>
+          <span class="text-danger">{{ error_lastname }}</div>
         {% endif %}
       </div>
 
@@ -74,7 +74,7 @@
           autocomplete="on"
         />
         {% if error_address_1 %}
-          <div class="text-danger">{{ error_address_1 }}</div>
+          <span class="text-danger">{{ error_address_1 }}</div>
         {% endif %}
       </div>
       <div class="form-group">
@@ -107,7 +107,7 @@
           autocomplete="on"
         />
         {% if error_city %}
-          <div class="text-danger">{{ error_city }}</div>
+          <span class="text-danger">{{ error_city }}</div>
         {% endif %}
       </div>
       <div class="form-group">
@@ -124,7 +124,7 @@
           autocomplete="on"
         />
         {% if error_postcode %}
-          <div class="text-danger">{{ error_postcode }}</div>
+          <span class="text-danger">{{ error_postcode }}</div>
         {% endif %}
       </div>
       <div class="form-group required">
@@ -140,21 +140,21 @@
           {% endfor %}
         </select>
         {% if error_country %}
-          <div class="text-danger">{{ error_country }}</div>
+          <span class="text-danger">{{ error_country }}</div>
         {% endif %} 
       </div>
       <div class="form-group required">
         <label for="input-zone">{{ entry_zone }}</label>
-        <select name="zone_id" id="input-zone" class="form-control"></select>
+        <select name="zone_id" id="input-zone" ></select>
           {% if error_zone %}
-            <div class="text-danger">{{ error_zone }}</div>
+            <span class="text-danger">{{ error_zone }}</div>
           {% endif %}
       </div>
       {% for custom_field in custom_fields %}
       {% if custom_field.type == 'select' %}
         <div class="form-group {% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
           <label for="input-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
-          <select name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" id="input-custom-field{{ custom_field.custom_field_id }}" class="form-control">
+          <select name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" id="input-custom-field{{ custom_field.custom_field_id }}" >
             <option value="">{{ text_select }}</option>
             {% for custom_field_value in custom_field.custom_field_value %}
               {% if address_custom_field[custom_field.custom_field_id] and custom_field_value.custom_field_value_id == address_custom_field[custom_field.custom_field_id] %}
@@ -165,7 +165,7 @@
             {% endfor %}
           </select>
           {% if error_custom_field[custom_field.custom_field_id] %}
-            <div class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
+            <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
           {% endif %}
         </div>
       {% endif %}
@@ -188,7 +188,7 @@
             </div>
           {% endfor %}
           {% if error_custom_field[custom_field.custom_field_id] %}
-            <div class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
+            <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
           {% endif %} 
         </div>
       {% endif %}
@@ -206,7 +206,7 @@
               {% endif %} </div>
             {% endfor %} </div>
           {% if error_custom_field[custom_field.custom_field_id] %}
-          <div class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
+          <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
           {% endif %} </div>
       </div>
       {% endif %}
@@ -216,7 +216,7 @@
         <div class="col-sm-10">
           <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{% if address_custom_field[custom_field.custom_field_id] %}{{ address_custom_field[custom_field.custom_field_id] }}{% else %}{{ custom_field.value }}{% endif %}" placeholder="{{ custom_field.name }}" id="input-custom-field{{ custom_field.custom_field_id }}" />
           {% if error_custom_field[custom_field.custom_field_id] %}
-          <div class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
+          <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
           {% endif %} 
         </div>
       </div>
@@ -225,9 +225,9 @@
       <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
         <label for="input-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
         <div class="col-sm-10">
-          <textarea name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" rows="5" placeholder="{{ custom_field.name }}" id="input-custom-field{{ custom_field.custom_field_id }}" class="form-control">{% if address_custom_field[custom_field.custom_field_id] %}{{ address_custom_field[custom_field.custom_field_id] }}{% else %}{{ custom_field.value }}{% endif %}</textarea>
+          <textarea name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" rows="5" placeholder="{{ custom_field.name }}" id="input-custom-field{{ custom_field.custom_field_id }}" >{% if address_custom_field[custom_field.custom_field_id] %}{{ address_custom_field[custom_field.custom_field_id] }}{% else %}{{ custom_field.value }}{% endif %}</textarea>
           {% if error_custom_field[custom_field.custom_field_id] %}
-          <div class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
+          <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
           {% endif %} </div>
       </div>
       {% endif %}
@@ -239,7 +239,7 @@
           <input type="hidden" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{% if address_custom_field[custom_field.custom_field_id]['code'] %}{{ address_custom_field[custom_field.custom_field_id]['code'] }}{% endif %}" />
           <span>{{ address_custom_field[custom_field.custom_field_id]['name'] }}</span>
           {% if error_custom_field[custom_field.custom_field_id] %}
-          <div class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
+          <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
           {% endif %} </div>
       </div>
       {% endif %}
@@ -252,7 +252,7 @@
             <button type="button" class="button"><i class="icon-calendar"></i></button>
           </div>
           {% if error_custom_field[custom_field.custom_field_id] %}
-          <div class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
+          <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
           {% endif %} </div>
       </div>
       {% endif %}
@@ -265,7 +265,7 @@
             <button type="button" class="button"><i class="icon-calendar"></i></button>
           </div>
           {% if error_custom_field[custom_field.custom_field_id] %}
-          <div class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
+          <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
           {% endif %} </div>
       </div>
       {% endif %}
@@ -278,7 +278,7 @@
             <button type="button" class="button"><i class="icon-calendar"></i></button>
           </div>
           {% if error_custom_field[custom_field.custom_field_id] %}
-          <div class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
+          <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
           {% endif %} </div>
       </div>
       {% endif %}
@@ -365,7 +365,7 @@ $('button[id^=\'button-custom-field\']').on('click', function() {
 					$(element).parent().find('.text-danger').remove();
 					
 					if (json['error']) {
-						$(element).parent().find('input').after('<div class="text-danger">' + json['error'] + '</div>');
+						$(element).parent().find('input').after('<span class="text-danger">' + json['error'] + '</div>');
 					}
 					
 					if (json['success']) {
