--- a/catalog/view/theme/helium/template/account/affiliate.twig
+++ b/catalog/view/theme/helium/template/account/affiliate.twig
@@ -76,7 +76,7 @@
         <div class="col-sm-10">
           <input type="text" name="cheque" value="{{ cheque }}" placeholder="{{ entry_cheque }}" id="input-cheque" />
           {% if error_cheque %}
-          <div class="text-danger">{{ error_cheque }}</div>
+          <span class="text-danger">{{ error_cheque }}</div>
           {% endif %}
         </div>
         </div>
@@ -87,7 +87,7 @@
         <div class="col-sm-10">
           <input type="text" name="paypal" value="{{ paypal }}" placeholder="{{ entry_paypal }}" id="input-paypal" />
           {% if error_paypal %}
-          <div class="text-danger">{{ error_paypal }}</div>
+          <span class="text-danger">{{ error_paypal }}</div>
           {% endif %}
         </div>
         </div>
@@ -116,7 +116,7 @@
           <div class="col-sm-10">
             <input type="text" name="bank_account_name" value="{{ bank_account_name }}" placeholder="{{ entry_bank_account_name }}" id="input-bank-account-name" />
             {% if error_bank_account_name %}
-            <div class="text-danger">{{ error_bank_account_name }}</div>
+            <span class="text-danger">{{ error_bank_account_name }}</div>
             {% endif %}
           </div>
         </div>
@@ -125,7 +125,7 @@
           <div class="col-sm-10">
             <input type="text" name="bank_account_number" value="{{ bank_account_number }}" placeholder="{{ entry_bank_account_number }}" id="input-bank-account-number" />
             {% if error_bank_account_number %}
-            <div class="text-danger">{{ error_bank_account_number }}</div>
+            <span class="text-danger">{{ error_bank_account_number }}</div>
             {% endif %}
           </div>
         </div>
@@ -147,7 +147,7 @@
             {% endfor %}
           </select>
           {% if error_custom_field[custom_field.custom_field_id] %}
-          <div class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
+          <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
           {% endif %}
         </div>
       </div>
@@ -172,7 +172,7 @@
             {% endfor %}
           </div>
           {% if error_custom_field[custom_field.custom_field_id] %}
-          <div class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
+          <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
           {% endif %}
         </div>
       </div>
@@ -197,7 +197,7 @@
             {% endfor %}
           </div>
           {% if error_custom_field[custom_field.custom_field_id] %}
-          <div class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
+          <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
           {% endif %}
         </div>
       </div>
@@ -208,7 +208,7 @@
         <div class="col-sm-10">
           <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{% if affiliate_custom_field[custom_field.custom_field_id] %}{{ affiliate_custom_field[custom_field.custom_field_id] }}{% else %}{{ custom_field.value }}{% endif %}" placeholder="{{ custom_field.name }}" id="input-custom-field{{ custom_field.custom_field_id }}" />
           {% if error_custom_field[custom_field.custom_field_id] %}
-          <div class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
+          <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
           {% endif %}
         </div>
       </div>
@@ -219,7 +219,7 @@
         <div class="col-sm-10">
           <textarea name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" rows="5" placeholder="{{ custom_field.name }}" id="input-custom-field{{ custom_field.custom_field_id }}" class="form-control">{% if affiliate_custom_field[custom_field.custom_field_id] %}{{ affiliate_custom_field[custom_field.custom_field_id] }}{% else %}{{ custom_field.value }}{% endif %}</textarea>
           {% if error_custom_field[custom_field.custom_field_id] %}
-          <div class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
+          <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
           {% endif %}
         </div>
       </div>
@@ -231,7 +231,7 @@
           <button type="button" id="button-custom-field{{ custom_field.custom_field_id }}" class="button"><i class="fa fa-upload"></i> {{ button_upload }}</button>
           <input type="hidden" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{% if affiliate_custom_field[custom_field.custom_field_id] %}{{ affiliate_custom_field[custom_field.custom_field_id] }} {% endif %}" />
           {% if error_custom_field[custom_field.custom_field_id] %}
-          <div class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
+          <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
           {% endif %}
         </div>
       </div>
@@ -246,7 +246,7 @@
             <button type="button" class="button"><i class="icon-calendar"></i></button>
             </span></div>
           {% if error_custom_field[custom_field.custom_field_id] %}
-          <div class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
+          <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
           {% endif %}
         </div>
       </div>
@@ -261,7 +261,7 @@
             <button type="button" class="button"><i class="icon-calendar"></i></button>
             </span></div>
           {% if error_custom_field[custom_field.custom_field_id] %}
-          <div class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
+          <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
           {% endif %}
         </div>
       </div>
@@ -276,7 +276,7 @@
             <button type="button" class="button"><i class="icon-calendar"></i></button>
             </span></div>
           {% if error_custom_field[custom_field.custom_field_id] %}
-          <div class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
+          <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
           {% endif %}
         </div>
       </div>
@@ -374,7 +374,7 @@ $('button[id^=\'button-custom-field\']').on('click', function() {
 					$(node).parent().find('.text-danger').remove();
 
 					if (json['error']) {
-						$(node).parent().find('input').after('<div class="text-danger">' + json['error'] + '</div>');
+						$(node).parent().find('input').after('<span class="text-danger">' + json['error'] + '</div>');
 					}
 
 					if (json['success']) {
