--- a/catalog/view/theme/helium/template/account/edit.twig
+++ b/catalog/view/theme/helium/template/account/edit.twig
@@ -25,7 +25,7 @@
             minlength="3" maxlength="32"
           />
           {% if error_firstname %}
-            <div class="text-danger">{{ error_firstname }}</div>
+            <span class="text-danger">{{ error_firstname }}</div>
           {% endif %}
         </div>
 
@@ -43,7 +43,7 @@
             minlength="3" maxlength="32"
           />
           {% if error_lastname %}
-            <div class="text-danger">{{ error_lastname }}</div>
+            <span class="text-danger">{{ error_lastname }}</div>
           {% endif %}
         </div>
 
@@ -59,7 +59,7 @@
             enterkeyhint="next"
           />
           {% if error_email %}
-            <div class="text-danger">{{ error_email }}</div>
+            <span class="text-danger">{{ error_email }}</div>
           {% endif %} 
         </div>
 
@@ -76,7 +76,7 @@
             minlength="3" maxlength="32"
           />
           {% if error_telephone %}
-            <div class="text-danger">{{ error_telephone }}</div>
+            <span class="text-danger">{{ error_telephone }}</div>
           {% endif %} 
         </div>
 
@@ -96,7 +96,7 @@
               {% endfor %}
             </select>
             {% if error_custom_field[custom_field.custom_field_id] %}
-            <div class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
+            <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
             {% endif %}
           </div>
         </div>
@@ -121,7 +121,7 @@
               {% endfor %}
             </div>
             {% if error_custom_field[custom_field.custom_field_id] %}
-            <div class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
+            <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
             {% endif %}
           </div>
         </div>
@@ -146,7 +146,7 @@
               {% endfor %}
             </div>
             {% if error_custom_field[custom_field.custom_field_id] %}
-            <div class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
+            <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
             {% endif %}
           </div>
         </div>
@@ -157,7 +157,7 @@
           <div class="col-sm-10">
             <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{% if account_custom_field[custom_field.custom_field_id] %}{{ account_custom_field[custom_field.custom_field_id] }}{% else %}{{ custom_field.value }}{% endif %}" placeholder="{{ custom_field.name }}" id="input-custom-field{{ custom_field.custom_field_id }}" />
             {% if error_custom_field[custom_field.custom_field_id] %}
-            <div class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
+            <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
             {% endif %}
           </div>
         </div>
@@ -168,7 +168,7 @@
           <div class="col-sm-10">
             <textarea name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" rows="5" placeholder="{{ custom_field.name }}" id="input-custom-field{{ custom_field.custom_field_id }}" class="form-control">{% if account_custom_field[custom_field.custom_field_id] %}{{ account_custom_field[custom_field.custom_field_id] }}{% else %}{{ custom_field.value }}{% endif %}</textarea>
             {% if error_custom_field[custom_field.custom_field_id] %}
-            <div class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
+            <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
             {% endif %}
           </div>
         </div>
@@ -181,7 +181,7 @@
             <input type="hidden" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{% if account_custom_field[custom_field.custom_field_id]['code'] %}{{ account_custom_field[custom_field.custom_field_id]['code'] }} {% endif %}" />
             <span>{{ account_custom_field[custom_field.custom_field_id]['name'] }}</span>
             {% if error_custom_field[custom_field.custom_field_id] %}
-            <div class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
+            <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
             {% endif %}
           </div>
         </div>
@@ -196,7 +196,7 @@
               <button type="button" class="button"><i class="icon-calendar"></i></button>
               </span></div>
             {% if error_custom_field[custom_field.custom_field_id] %}
-            <div class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
+            <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
             {% endif %}
           </div>
         </div>
@@ -211,7 +211,7 @@
               <button type="button" class="button"><i class="icon-calendar"></i></button>
               </span></div>
             {% if error_custom_field[custom_field.custom_field_id] %}
-            <div class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
+            <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
             {% endif %}
           </div>
         </div>
@@ -226,7 +226,7 @@
               <button type="button" class="button"><i class="icon-calendar"></i></button>
               </span></div>
             {% if error_custom_field[custom_field.custom_field_id] %}
-            <div class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
+            <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
             {% endif %}
           </div>
         </div>
@@ -300,7 +300,7 @@ $('button[id^=\'button-custom-field\']').on('click', function() {
 					$(element).parent().find('.text-danger').remove();
 
 					if (json['error']) {
-						$(element).parent().find('input').after('<div class="text-danger">' + json['error'] + '</div>');
+						$(element).parent().find('input').after('<span class="text-danger">' + json['error'] + '</div>');
 					}
 
 					if (json['success']) {
