--- a/catalog/view/theme/helium/template/account/register.twig
+++ b/catalog/view/theme/helium/template/account/register.twig
@@ -44,7 +44,7 @@
           minlength="3" maxlength="32"
         />
         {% if error_firstname %}
-          <div class="text-danger">{{ error_firstname }}</div>
+          <span class="text-danger">{{ error_firstname }}</div>
         {% endif %}
       </div>
 
@@ -62,7 +62,7 @@
           minlength="3" maxlength="32"
         />
         {% if error_lastname %}
-          <div class="text-danger">{{ error_lastname }}</div>
+          <span class="text-danger">{{ error_lastname }}</div>
         {% endif %}
       </div>
 
@@ -78,7 +78,7 @@
           enterkeyhint="next"
         />
         {% if error_email %}
-          <div class="text-danger">{{ error_email }}</div>
+          <span class="text-danger">{{ error_email }}</div>
         {% endif %} 
       </div>
 
@@ -95,7 +95,7 @@
           minlength="3" maxlength="32"
         />
         {% if error_telephone %}
-          <div class="text-danger">{{ error_telephone }}</div>
+          <span class="text-danger">{{ error_telephone }}</div>
         {% endif %} 
       </div>
       {% for custom_field in custom_fields %}
@@ -143,7 +143,7 @@
           
           </select>
           {% if error_custom_field[custom_field.custom_field_id] %}
-          <div class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
+          <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
           {% endif %}</div>
       </div>
       {% endif %}
@@ -163,7 +163,7 @@
               {% endif %} </div>
             {% endfor %}</div>
           {% if error_custom_field[custom_field.custom_field_id] %}
-          <div class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
+          <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
           {% endif %}</div>
       </div>
       {% endif %}
@@ -183,7 +183,7 @@
               {% endif %} </div>
             {% endfor %} </div>
           {% if error_custom_field[custom_field.custom_field_id] %}
-          <div class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
+          <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
           {% endif %} </div>
       </div>
       {% endif %}
@@ -193,7 +193,7 @@
         <div class="col-sm-10">
           <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{% if register_custom_field[custom_field.custom_field_id] %}{{ register_custom_field[custom_field.custom_field_id] }}{% else %}{{ custom_field.value }}{% endif %}" placeholder="{{ custom_field.name }}" id="input-custom-field{{ custom_field.custom_field_id }}" />
           {% if error_custom_field[custom_field.custom_field_id] %}
-          <div class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
+          <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
           {% endif %} </div>
       </div>
       {% endif %}
@@ -203,7 +203,7 @@
         <div class="col-sm-10">
           <textarea name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" rows="5" placeholder="{{ custom_field.name }}" id="input-custom-field{{ custom_field.custom_field_id }}" class="form-control">{% if register_custom_field[custom_field.custom_field_id] %}{{ register_custom_field[custom_field.custom_field_id] }}{% else %}{{ custom_field.value }}{% endif %}</textarea>
           {% if error_custom_field[custom_field.custom_field_id] %}
-          <div class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
+          <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
           {% endif %} </div>
       </div>
       {% endif %}
@@ -214,7 +214,7 @@
           <button type="button" id="button-custom-field{{ custom_field.custom_field_id }}" class="button"><i class="fa fa-upload"></i> {{ button_upload }}</button>
           <input type="hidden" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{% if register_custom_field[custom_field.custom_field_id] %}  {{ register_custom_field[custom_field.custom_field_id] }} {% endif %}" />
           {% if error_custom_field[custom_field.custom_field_id] %}
-          <div class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
+          <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
           {% endif %}</div>
       </div>
       {% endif %}
@@ -228,7 +228,7 @@
             <button type="button" class="button"><i class="icon-calendar"></i></button>
             </span></div>
           {% if error_custom_field[custom_field.custom_field_id] %}
-          <div class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
+          <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
           {% endif %} </div>
       </div>
       {% endif %}
@@ -242,7 +242,7 @@
             <button type="button" class="button"><i class="icon-calendar"></i></button>
             </span></div>
           {% if error_custom_field[custom_field.custom_field_id] %}
-          <div class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
+          <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
           {% endif %} </div>
       </div>
       {% endif %}
@@ -256,7 +256,7 @@
             <button type="button" class="button"><i class="icon-calendar"></i></button>
             </span></div>
           {% if error_custom_field[custom_field.custom_field_id] %}
-          <div class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
+          <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
           {% endif %} </div>
       </div>
       {% endif %}
@@ -269,7 +269,7 @@
         <div class="col-sm-10">
           <input type="password" name="password" value="{{ password }}" placeholder="{{ entry_password }}" id="input-password" />
           {% if error_password %}
-          <div class="text-danger">{{ error_password }}</div>
+          <span class="text-danger">{{ error_password }}</div>
           {% endif %} </div>
       </div>
       <div class="form-group required">
@@ -277,7 +277,7 @@
         <div class="col-sm-10">
           <input type="password" name="confirm" value="{{ confirm }}" placeholder="{{ entry_confirm }}" id="input-confirm" />
           {% if error_confirm %}
-          <div class="text-danger">{{ error_confirm }}</div>
+          <span class="text-danger">{{ error_confirm }}</div>
           {% endif %} </div>
       </div>
     </fieldset>
@@ -409,7 +409,7 @@ $('button[id^=\'button-custom-field\']').on('click', function() {
 					$(element).parent().find('.text-danger').remove();
 
 					if (json['error']) {
-						$(node).parent().find('input').after('<div class="text-danger">' + json['error'] + '</div>');
+						$(node).parent().find('input').after('<span class="text-danger">' + json['error'] + '</div>');
 					}
 
 					if (json['success']) {
