--- a/catalog/view/theme/helium/template/account/reset.twig
+++ b/catalog/view/theme/helium/template/account/reset.twig
@@ -10,14 +10,14 @@
         <label for="input-password">{{ entry_password }}</label>
         <input type="password" name="password" value="{{ password }}" id="input-password" />
         {% if error_password %}
-          <div class="text-danger">{{ error_password }}</div>
+          <span class="text-danger">{{ error_password }}</div>
         {% endif %}
       </div>
       <div class="form-group">
         <label for="input-confirm">{{ entry_confirm }}</label>
         <input type="password" name="confirm" value="{{ confirm }}" id="input-confirm" />
         {% if error_confirm %}
-          <div class="text-danger">{{ error_confirm }}</div>
+          <span class="text-danger">{{ error_confirm }}</div>
         {% endif %}
       </div>
     </fieldset>
