--- a/catalog/view/theme/helium/template/account/return_form.twig
+++ b/catalog/view/theme/helium/template/account/return_form.twig
@@ -31,7 +31,7 @@
               minlength="3" maxlength="32"
             />
             {% if error_firstname %}
-              <div class="text-danger">{{ error_firstname }}</div>
+              <span class="text-danger">{{ error_firstname }}</div>
             {% endif %}
           </div>
 
@@ -49,7 +49,7 @@
               minlength="3" maxlength="32"
             />
             {% if error_lastname %}
-              <div class="text-danger">{{ error_lastname }}</div>
+              <span class="text-danger">{{ error_lastname }}</div>
             {% endif %}
           </div>
 
@@ -65,7 +65,7 @@
               enterkeyhint="next"
             />
             {% if error_email %}
-              <div class="text-danger">{{ error_email }}</div>
+              <span class="text-danger">{{ error_email }}</div>
             {% endif %} 
           </div>
 
@@ -82,7 +82,7 @@
               minlength="3" maxlength="32"
             />
             {% if error_telephone %}
-              <div class="text-danger">{{ error_telephone }}</div>
+              <span class="text-danger">{{ error_telephone }}</div>
             {% endif %} 
           </div>
 
@@ -90,7 +90,7 @@
             <input type="text" name="order_id" value="{{ order_id }}" placeholder="{{ entry_order_id }}" id="input-order-id" />
             <label for="input-order-id">{{ entry_order_id }}</label>
             {% if error_order_id %}
-              <div class="text-danger">{{ error_order_id }}</div>
+              <span class="text-danger">{{ error_order_id }}</div>
             {% endif %}
           </div>
           <div class="form-group">
@@ -105,14 +105,14 @@
             <input type="text" name="product" value="{{ product }}" placeholder="{{ entry_product }}" id="input-product" />
             <input type="hidden" name="product_id" value="{{ product_id }}" />
             {% if error_product %}
-            <div class="text-danger">{{ error_product }}</div>
+            <span class="text-danger">{{ error_product }}</div>
             {% endif %}
           </div>
           <div class="form-group required">
             <label for="input-model">{{ entry_model }}</label>
               <input type="text" name="model" value="{{ model }}" placeholder="{{ entry_model }}" id="input-model" />
               {% if error_model %}
-                <div class="text-danger">{{ error_model }}</div>
+                <span class="text-danger">{{ error_model }}</div>
               {% endif %}
           </div>
           <div class="form-group">
@@ -137,7 +137,7 @@
               {% endif %}
             {% endfor %}
             {% if error_reason %}
-              <div class="text-danger">{{ error_reason }}</div>
+              <span class="text-danger">{{ error_reason }}</div>
             {% endif %} 
           </div>
           <div class="form-group required">
