--- a/catalog/view/theme/helium/template/account/voucher.twig
+++ b/catalog/view/theme/helium/template/account/voucher.twig
@@ -13,7 +13,7 @@
       <div class="col-sm-10">
         <input type="text" name="to_name" value="{{ to_name }}" id="input-to-name" />
         {% if error_to_name %}
-        <div class="text-danger">{{ error_to_name }}</div>
+        <span class="text-danger">{{ error_to_name }}</div>
         {% endif %}
       </div>
     </div>
@@ -22,7 +22,7 @@
       <div class="col-sm-10">
         <input type="text" name="to_email" value="{{ to_email }}" id="input-to-email" />
         {% if error_to_email %}
-        <div class="text-danger">{{ error_to_email }}</div>
+        <span class="text-danger">{{ error_to_email }}</div>
         {% endif %}
       </div>
     </div>
@@ -31,7 +31,7 @@
       <div class="col-sm-10">
         <input type="text" name="from_name" value="{{ from_name }}" id="input-from-name" />
         {% if error_from_name %}
-        <div class="text-danger">{{ error_from_name }}</div>
+        <span class="text-danger">{{ error_from_name }}</div>
         {% endif %}
       </div>
     </div>
@@ -40,7 +40,7 @@
       <div class="col-sm-10">
         <input type="text" name="from_email" value="{{ from_email }}" id="input-from-email" />
         {% if error_from_email %}
-        <div class="text-danger">{{ error_from_email }}</div>
+        <span class="text-danger">{{ error_from_email }}</div>
         {% endif %}
       </div>
     </div>
@@ -63,7 +63,7 @@
         {% endif %}
         {% endfor %}
         {% if error_theme %}
-        <div class="text-danger">{{ error_theme }}</div>
+        <span class="text-danger">{{ error_theme }}</div>
         {% endif %}
       </div>
     </div>
@@ -78,7 +78,7 @@
       <div class="col-sm-10">
         <input type="text" name="amount" value="{{ amount }}" id="input-amount" class="form-control" size="5" />
         {% if error_amount %}
-        <div class="text-danger">{{ error_amount }}</div>
+        <span class="text-danger">{{ error_amount }}</div>
         {% endif %}
       </div>
     </div>
