--- a/catalog/view/theme/helium/template/blog/article.twig
+++ b/catalog/view/theme/helium/template/blog/article.twig
@@ -118,7 +118,7 @@
 // 					$('.text-danger').remove();
 
 // 					if (json['error']) {
-// 						$(node).parent().find('input').after('<div class="text-danger">' + json['error'] + '</div>');
+// 						$(node).parent().find('input').after('<span class="text-danger">' + json['error'] + '</div>');
 // 					}
 
 // 					if (json['success']) {
