--- a/catalog/view/theme/helium/template/checkout/guest_shipping.twig
+++ b/catalog/view/theme/helium/template/checkout/guest_shipping.twig
@@ -342,7 +342,7 @@ $('#collapse-shipping-address button[id^=\'button-shipping-custom-field\']').on(
 					$(node).parent().find('.text-danger').remove();
 
 					if (json['error']) {
-						$(node).parent().find('input[name^=\'custom_field\']').after('<div class="text-danger">' + json['error'] + '</div>');
+						$(node).parent().find('input[name^=\'custom_field\']').after('<span class="text-danger">' + json['error'] + '</div>');
 					}
 
 					if (json['success']) {
