--- a/catalog/view/theme/helium/template/extension/captcha/google.twig
+++ b/catalog/view/theme/helium/template/extension/captcha/google.twig
@@ -5,14 +5,14 @@
     <label for="input-payment-captcha">{{ entry_captcha }}</label>
     <div id="input-payment-captcha" class="g-recaptcha" data-sitekey="{{ site_key }}"></div>
     {% if error_captcha %}
-    <div class="text-danger">{{ error_captcha }}</div>
+    <span class="text-danger">{{ error_captcha }}</div>
     {% endif %}
     {% else %}
     <label>{{ entry_captcha }}</label>
     <div class="col-sm-10">
       <div class="g-recaptcha" data-sitekey="{{ site_key }}"></div>
       {% if error_captcha %}
-      <div class="text-danger">{{ error_captcha }}</div>
+      <span class="text-danger">{{ error_captcha }}</div>
       {% endif %}</div>
     {% endif %}</div>
 </fieldset>
