--- a/catalog/view/theme/helium/template/product/product.twig
+++ b/catalog/view/theme/helium/template/product/product.twig
@@ -277,7 +277,7 @@ $('button[id^=\'button-upload\']').on('click', function() {
 					$('.text-danger').remove();
 
 					if (json['error']) {
-						$(node).parent().find('input').after('<div class="text-danger">' + json['error'] + '</div>');
+						$(node).parent().find('input').after('<span class="text-danger">' + json['error'] + '</div>');
 					}
 
 					if (json['success']) {
